--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,9 +8,21 @@
     <header>
         <nav>
             <ul>
-                <li><a></a></li>
+                <li><a>Horários</a></li>
+                <li><a>Agendar Horários</a></li>
+                <li><a>Horários Disponíveis</a></li>
+                {% if user.is_authenticated %}
+                    <li><a>Meus Agendamentos</a></li>
+                    <li><a>Logout</a></li>
+                {% else %}
+                    <li><a>Login</a></li>
+                {% endif %}
             </ul>
         </nav>
     </header>
+    <main>
+        {% block content %}
+        {% endblock %}
+    </main>
 </body>
 </html>
