Creating new paths to new urls

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,11 +8,11 @@
     <header>
         <nav>
             <ul>
-                <li><a>Horários</a></li>
-                <li><a>Agendar Horários</a></li>
-                <li><a>Horários Disponíveis</a></li>
+                <li><a href="{% url 'appointments-list' %}">Horários</a></li>
+                <li><a href="{% url 'appointments-create' %}">Agendar Horários</a></li>
+                <li><a href="{% url 'available-slots-list' %">Horários Disponíveis</a></li>
                 {% if user.is_authenticated %}
-                    <li><a>Meus Agendamentos</a></li>
+                    <li><a href="{% url 'user-appointments-list' user.username %}">Meus Agendamentos</a></li>
                     <li><a>Logout</a></li>
                 {% else %}
                     <li><a>Login</a></li>
