--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,5 +1,24 @@
 body {
     font-family: Arial, sans-serif;
+    background-color: whitesmoke;
+    color: #333;
+    margin: 0;
+    padding: 0;
+}
+
+header{
+    background-color: orangered;
+    color: #fff;
+    text-align: center;
+}
+
+nav {
+    background-color: orangered;
+    color: #fff;
+    height: 50px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 header nav ul {
