--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -24,16 +24,28 @@ nav {
 header nav ul {
     list-style: none;
     padding: 0;
+    margin: 0;
+    display: flex;
 }
 
 header nav ul li {
     display: inline;
-    margin-right: 10px;
+    margin-right: 15px;
 }
 
 header nav ul li a {
     text-decoration: none;
-    color: #000;
+    color: #fff;
+    font-size: 16px;
+    padding: 15px;
+    transition: all 0.3s ease;
+}
+
+footer {
+    background-color: rgba(95, 94, 94, 0.61);
+    color: #333;
+    padding: 20px;
+    text-align: center;
 }
 
 main {
@@ -67,3 +79,5 @@ button {
 button:hover {
     background-color: #0056b3;
 }
+
+
