--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -41,6 +41,10 @@ header nav ul li a {
     transition: all 0.3s ease;
 }
 
+main {
+    padding: 20px;
+}
+
 footer {
     background-color: rgba(95, 94, 94, 0.61);
     color: #333;
@@ -48,36 +52,6 @@ footer {
     text-align: center;
 }
 
-main {
-    padding: 20px;
+.container{
+    
 }
-
-form {
-    margin: 20px 0;
-}
-
-form label {
-    display: block;
-    margin-bottom: 5px;
-}
-
-form input, form select, form button {
-    margin-bottom: 10px;
-    padding: 5px;
-    width: 100%;
-    box-sizing: border-box;
-}
-
-button {
-    padding: 10px 20px;
-    background-color: #007BFF;
-    color: #fff;
-    border: none;
-    cursor: pointer;
-}
-
-button:hover {
-    background-color: #0056b3;
-}
-
-
