Adding the footer

--- a/schedules/templates/schedules/home.html
+++ b/schedules/templates/schedules/home.html
@@ -5,10 +5,15 @@
     <title>Tenda Fitness</title>
 </head>
 <body>
-    <div class="container">
-        <div>
+    <main>
+        <div class="container">
+            <div>
 
+            </div>
         </div>
-    </div>
+    </main>
+    <footer>
+        <p>&copy;Tenda Beach Club</p>
+    </footer>
 </body>
 </html>
