--- a/schedules/templates/schedules/home.html
+++ b/schedules/templates/schedules/home.html
@@ -1,14 +1,24 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Tenda Fitness</title>
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 </head>
 <body>
     <main>
         <div class="container">
-            <div>
+            <div class="logo">
+                <img src="" alt="">
+            </div>
+            <div class="options_home">
+                <div class="scheduling_buttom">
 
+                </div>
+                <div class="my_account_buttom">
+
+                </div>
             </div>
         </div>
     </main>
