--- a/schedules/templates/schedules/home.html
+++ b/schedules/templates/schedules/home.html
@@ -10,7 +10,7 @@
     <main>
         <div class="container">
             <div class="logo">
-                <img src="" alt="">
+                <img src="{% static 'img/teste-450.png' %}" alt="">
             </div>
             <div class="options_home">
                 <div class="scheduling_buttom">
