--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -64,5 +64,31 @@ footer {
 .logo{
     align-self: center;
     padding-left: 15px;
-    
+}
+
+.logo img{
+    width: 300px;
+}
+
+.options_home{
+    padding-top: 10px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
+
+.scheduling_button{
+    width: auto;
+    color: #fff;
+    margin-right: 8px;
+    background: orangered;
+    display: inline-flex;
+    flex-direction: column;
+    align-items: stretch;
+    position: relative;
+    border: 0;
+    vertical-align: middle;
+    padding: 0;
+    font-size: 14px;
+    text-align: center;
 }
