--- a/schedules/templates/schedules/home.html
+++ b/schedules/templates/schedules/home.html
@@ -13,8 +13,11 @@
                 <img src="{% static 'img/teste-450.png' %}" alt="">
             </div>
             <div class="options_home">
-                <div class="scheduling_buttom">
-
+                <div class="scheduling_button">
+                    <a href="{% url 'appointments-create' %}">
+                        <i></i>
+                        <p>Novo Agendamento</p>
+                    </a>
                 </div>
                 <div class="my_account_buttom">
 
