Adding the scheduling icon

--- a/schedules/templates/schedules/home.html
+++ b/schedules/templates/schedules/home.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>Tenda Fitness</title>
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+    <script src="https://kit.fontawesome.com/6bf3458bf5.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <main>
@@ -15,7 +16,7 @@
             <div class="options_home">
                 <div class="scheduling_button">
                     <a href="{% url 'appointments-create' %}">
-                        <i></i>
+                        <i class="fa-solid fa-calendar-days fa-2xl fa-2x"></i>
                         <p>Novo Agendamento</p>
                     </a>
                 </div>
