--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -73,12 +73,13 @@ footer {
 .options_home{
     padding-top: 10px;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     flex-wrap: wrap;
+    justify-content: center;
 }
 
 .scheduling_button{
-    width: auto;
+    width: 300px;
     color: #fff;
     margin-right: 8px;
     background: orangered;
@@ -107,11 +108,11 @@ footer {
     font-size: 25px;
 }
 
-.my_account_button{
-    width: auto;
+.my_account_buttom {
+    width: 300px;
     color: #fff;
     margin-right: 8px;
-    background: orangered;
+    background: rgb(78, 21, 21);
     display: inline-flex;
     flex-direction: column;
     align-items: stretch;
@@ -123,4 +124,16 @@ footer {
     line-height: 2em;
     text-decoration: none;
     text-align: center;
+}
+
+.my_account_buttom i {
+    padding-top: 30px;
+    font-size: 35px;
+    color: whitesmoke;
+}
+
+.my_account_buttom p {
+    padding-top: -5px;
+    color: white;
+    font-size: 25px;
 }
