Finishing the style of home buttons

--- a/schedules/templates/schedules/home.html
+++ b/schedules/templates/schedules/home.html
@@ -16,11 +16,15 @@
             <div class="options_home">
                 <div class="scheduling_button">
                     <a href="{% url 'appointments-create' %}">
-                        <i class="fa-solid fa-calendar-days fa-2xl fa-2x"></i>
+                        <i class="fa-solid fa-calendar-days"></i>
                         <p>Novo Agendamento</p>
                     </a>
                 </div>
                 <div class="my_account_buttom">
+                    <a href="{% url 'login' %}">
+                        <i class="fa-solid fa-user"></i>
+                        <p>Minhas Reservas</p>
+                    </a>
 
                 </div>
             </div>
