--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -18,6 +18,7 @@
                     <li><a href="{% url 'logout' %}">Logout</a></li>
                 {% else %}
                     <li><a href="{% url 'login' %}">Login</a></li>
+                    <li><a href="{% url 'register' %}">Cadastre-se</a></li>
                 {% endif %}
             </ul>
         </nav>
