Changing the title

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
-    <title>Tenda Fitness Quadra</title>
+    <title>Tenda Fitness Beach Club</title>
 </head>
 <body>
     <header>
