--- a/schedules/templates/schedules/home.html
+++ b/schedules/templates/schedules/home.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Tenda Fitness</title>
+    <title>Tenda Fitness Beach Club</title>
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
     <script src="https://kit.fontawesome.com/6bf3458bf5.js" crossorigin="anonymous"></script>
 </head>
