--- a/schedules/templates/schedules/home.html
+++ b/schedules/templates/schedules/home.html
@@ -21,7 +21,7 @@
                     </a>
                 </div>
                 <div class="my_account_buttom">
-                    <a href="{% url 'login' %}">
+                    <a href="{% url 'user-appointments-list' %}">
                         <i class="fa-solid fa-user"></i>
                         <p>Minhas Reservas</p>
                     </a>
