Correcting the requirement to acess appointments list view

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -13,8 +13,8 @@
         <nav>
             <ul>
                 <li><a href="{% url 'home' %}">Início</a></li>
-                {% if user.is_authenticaded and user.is_superuser %}
-                <li><a href="{% url 'appointments-list' %}">Horários</a></li>
+                {% if user.is_superuser %}
+                <li><a href="{% url 'appointments-list' %}">Horários do dia</a></li>
                 {% endif %}
                 {% if user.is_authenticated %}
                     <li><a href="{% url 'appointments-create' %}">Agendar </a></li>
