Adding a style to the buttons

--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -7,6 +7,6 @@
             {{ login_form.as_table }}
         </table>
 
-        <input type="submit" value="login">
+        <input class="btn btn-primary" type="submit" value="Login">
     </form>
 {% endblock %}
