--- a/accounts/templates/accounts/register.html
+++ b/accounts/templates/accounts/register.html
@@ -20,7 +20,7 @@
       {{ user_form.password2 }}
     </div>
     <div class="form-group">
-      <input type="submit" value="Cadastrar">
+      <input class="btn btn-primary" type="submit" value="Cadastrar">
     </div>
   </form>
 
