Rewriting the user appointments list using a table instead of a list

--- a/schedules/templates/schedules/user_appointments_list.html
+++ b/schedules/templates/schedules/user_appointments_list.html
@@ -14,7 +14,12 @@
         </tr>
       </thead>
       <tbody>
-        
+        {% for appointment in appointments %}
+        <tr>
+          <td>{{ appointment.day }}</td>
+          <td>{{ appointment.time }}</td>
+        </tr>
+        {% endfor %}
       </tbody>
     </table>
   </div>
