--- a/schedules/templates/schedules/user_appointments_list.html
+++ b/schedules/templates/schedules/user_appointments_list.html
@@ -18,6 +18,11 @@
         <tr>
           <td>{{ appointment.day }}</td>
           <td>{{ appointment.time }}</td>
+          <td>
+            <a href="{% url 'appointment-delete' appointment.id %}" class="btn btn-danger btn-sm btn-delete">
+              <i class="bi bi-trash"></i>
+            </a>
+          </td>
         </tr>
         {% endfor %}
       </tbody>
