Adding a update link to actions

--- a/schedules/templates/schedules/user_appointments_list.html
+++ b/schedules/templates/schedules/user_appointments_list.html
@@ -19,6 +19,9 @@
           <td>{{ appointment.day }}</td>
           <td>{{ appointment.time }}</td>
           <td>
+            <a href="{% url 'appointment-update' appointment.id %}" class="btn btn-warning btn-sm">
+              <i class="bi bi-pencil"></i>
+            </a>
             <a href="{% url 'appointment-delete' appointment.id %}" class="btn btn-danger btn-sm btn-delete">
               <i class="bi bi-trash"></i>
             </a>
